<resources>
    <string name="app_name">Edi</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail Address</string>
    <string name="main_pres_frag">This is the main fragment</string>
    <string name="interaction_frag">This is the interaction fragment</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="join">Join</string>
    <string name="author">Author: Joe Bloggs</string>
    <string name="title">Title: Very Cool Presentation Title</string>
    <string name="description">Date: 03/06/2017</string>
    <string name="status">Status:</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_pres">PresActivity</string>
</resources>
