<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lo_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.i2lc.edi.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="6">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:srcCompat="@drawable/edi" />

        <EditText
            android:id="@+id/firstNameNew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/lastNameNew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/emailNew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/e_mail"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/usernameNew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/passwordNew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textWebPassword" />

        <Button
            android:text="@string/sign_up"
            android:layout_height="0dp"
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:inputType="none"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:onClick="createNewUser"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>




    </LinearLayout>
</RelativeLayout>
