<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lo_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.i2lc.edi.LogInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="6">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/edi" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="text|textPersonName"
            android:id="@+id/username"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:layout_weight="0.5"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textWebPassword"
            android:id="@+id/password"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:inputType="none"
            android:onClick="logIn"
            android:text="@string/log_in" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/colorPrimaryDark"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="@color/icons" />



    </LinearLayout>
</RelativeLayout>
